# Moer_ScenePreviewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
ext/: imgui.cmake
shader/: phone.fs  phone.vs  screen.fs  screen.vs
src/: Camera.cpp  FrameBuffer.cpp  ImGuiManager.cpp  Image.cpp  Light.cpp  Material.cpp  Mesh.cpp  MoerHandler.cpp  Render.cpp  RenderTarget.cpp  Scene.cpp  Shader.cpp  Transform.cpp  VertexArrayObject.cpp  ZBuffer.cpp  main.cpp
src/Context/: ImGuiContext.cpp  OpenGLContext.cpp
src/Entity/: Mesh.cpp
src/Window/: GLWindow.cpp
src/include/: CMakeConfig.h.in  Camera.h  FiraCode.h  FrameBuffer.h  GLWindow.h  ImGuiContext.h  ImGuiManager.h  Image.h  Light.h  Material.h  Mesh.h  MoerHandler.h  OpenGLContext.h  OpenGLHeader.h  Render.h  RenderContext.h  RenderTarget.h  Scene.h  Shader.h  Transform.h  VertexArrayObject.h  Window.h  ZBuffer.h
src/resources/: FiraCode.cpp  FiraCodeNerd.cpp  ShaderHardCode.cpp
